add build directory

--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<outputDirectory>builds</outputDirectory>
+				</configuration>
 			</plugin>
 		</plugins>
 		<finalName>docker-spring-boot</finalName>
